# estudos-docker

./: Dockerfile  pyproject.toml  run.py
jornada-de-dados/: Dockerfile  pyproject.toml
jornada-de-dados/Aula 1/: app.py
jornada-de-dados/Aula 2/: docker-compose.yml
programador-lhama/: docker-compose.yml  pyproject.toml  run.py
src/config/: config.py
