[tool.poetry]
name = "estudos-docker"
version = "0.1.0"
description = ""
authors = ["Dan <daniel.leonssio@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "1.4.19"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
